feat: Implement DSP pipeline with moving average filter and state management
- Added CircularBufferArray and CircularBufferVector classes with move semantics and noexcept methods.
- Created DspPipeline class with methods for adding stages, processing audio, and managing state.
- Implemented MovingAverageStage using a circular buffer for efficient averaging.
- Introduced MovingAverageFilter class to handle moving average calculations.
- Enhanced TypeScript bindings to support new DSP features, including state persistence with Redis.
- Added example scripts demonstrating Redis integration and state management.
- Created comprehensive type definitions for processing options and Redis configuration.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ project (dsp-js-native VERSION 1.0 LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 17)
 
 add_definitions(-DNAPI_VERSION=10)
-include_directories(${CMAKE_JS_INC} "src/native/*")
-file(GLOB SOURCE_FILES "src/native/*")
+include_directories(${CMAKE_JS_INC} "src/native" "src/native/core" "src/native/utils" "src/native/adapters")
+file(GLOB_RECURSE SOURCE_FILES "src/native/*.cc" "src/native/*.cpp")
 
 add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${CMAKE_JS_SRC})
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
