--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Build native addon
         run: npm run build
 
-      - name: Run type checking
-        run: npx tsc --noEmit
+      - name: Run TypeScript check
+        run: npx tsx --version
 
       - name: Upload build artifacts (Windows)
         if: matrix.os == 'windows-latest'
@@ -83,5 +83,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run TypeScript compiler
-        run: npx tsc --noEmit
+      - name: Check TypeScript with tsx
+        run: npx tsx --version
