--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,14 +8,14 @@ on:
 
 jobs:
   build:
-    name: Build on ${{ matrix.os }}
+    name: Build on ${{ matrix.os }} (Node ${{ matrix.node-version }})
     runs-on: ${{ matrix.os }}
 
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        node-version: [18.x, 20.x]
+        node-version: [22.x] # using your local Node version (v22.17.1)
 
     steps:
       - name: Checkout code
@@ -27,47 +27,37 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
 
+      - name: Install build tools (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get update && sudo apt-get install -y build-essential cmake python3
+
+      - name: Install build tools (macOS)
+        if: matrix.os == 'macos-latest'
+        run: brew install cmake
+
       - name: Install dependencies
         run: npm ci
 
       - name: Build native addon
         run: npm run build
 
-      - name: Run TypeScript check
-        run: npx tsx --version
+      - name: Verify native module load
+        run: node -e "require('./build/Release/dsp_js_native.node'); console.log('✅ Native module loaded successfully');"
 
-      - name: Upload build artifacts (Windows)
-        if: matrix.os == 'windows-latest'
+      - name: TypeScript type check
+        run: npx tsc --noEmit
+
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: windows-node-${{ matrix.node-version }}-build
-          path: |
-            build/Release/*.node
-            src/build/*.node
-          retention-days: 7
-
-      - name: Upload build artifacts (Linux)
-        if: matrix.os == 'ubuntu-latest'
-        uses: actions/upload-artifact@v4
-        with:
-          name: linux-node-${{ matrix.node-version }}-build
-          path: |
-            build/Release/*.node
-            src/build/*.node
-          retention-days: 7
-
-      - name: Upload build artifacts (macOS)
-        if: matrix.os == 'macos-latest'
-        uses: actions/upload-artifact@v4
-        with:
-          name: macos-node-${{ matrix.node-version }}-build
+          name: ${{ matrix.os }}-node-${{ matrix.node-version }}-build
           path: |
             build/Release/*.node
             src/build/*.node
           retention-days: 7
 
   lint:
-    name: Lint
+    name: Lint and Type Check
     runs-on: ubuntu-latest
 
     steps:
@@ -77,11 +67,14 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: 22.x
           cache: "npm"
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Check TypeScript with tsx
-        run: npx tsx --version
+      - name: Run ESLint
+        run: npx eslint src --max-warnings=0
+
+      - name: TypeScript type check
+        run: npx tsc --noEmit
