--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "dsp-js-native",
   "version": "1.0.0",
-  "description": "",
+  "description": "High-performance DSP library with native C++ acceleration and Redis state persistence",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cmake-js compile",
+    "prebuild": "prebuildify --napi --strip",
+    "prebuild-all": "prebuildify --napi --strip --arch x64 --arch arm64",
+    "install": "node-gyp-build || cmake-js compile",
     "start": "tsx ./src/ts/index.ts"
   },
   "binary": {
@@ -13,17 +16,19 @@
       10
     ]
   },
-  "keywords": [],
+  "keywords": ["dsp", "signal-processing", "native", "redis", "real-time", "audio", "biosignal"],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
     "cmake-js": "^7.3.1",
     "node-addon-api": "^8.5.0",
+    "node-gyp-build": "^4.8.0",
     "redis": "^5.8.3"
   },
   "devDependencies": {
     "@types/node": "^24.9.1",
+    "prebuildify": "^6.0.1",
     "tsx": "^4.20.6"
   }
 }
