--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "High-performance DSP library with native C++ acceleration and Redis state persistence",
   "main": "index.js",
   "scripts": {
-    "test": "tsx --test src/ts/__tests__/MovingAverage.test.ts src/ts/__tests__/Rectify.test.ts src/ts/__tests__/RMS.test.ts src/ts/__tests__/Chaining.test.ts src/ts/__tests__/Redis.test.ts",
-    "test:watch": "tsx --test --watch src/ts/__tests__/**/*.test.ts",
+    "test": "node --import tsx --test src/ts/__tests__/MovingAverage.test.ts src/ts/__tests__/Rectify.test.ts src/ts/__tests__/RMS.test.ts src/ts/__tests__/Chaining.test.ts src/ts/__tests__/Redis.test.ts",
+    "test:watch": "node --import tsx --test --watch src/ts/__tests__/**/*.test.ts",
     "build": "cmake-js compile",
     "build-gyp": "node-gyp rebuild",
     "prebuild": "prebuildify --napi --strip",
@@ -13,7 +13,7 @@
   },
   "binary": {
     "napi_versions": [
-      10
+      8
     ]
   },
   "keywords": [
