--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "biosignal"
   ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "type": "module",
   "dependencies": {
     "node-addon-api": "^8.5.0",
