Add examples for Variance and Z-Score Normalize filters with state management and streaming use cases
- Implemented batch and moving variance examples demonstrating state management, state saving/restoring, and clearing state.
- Added multi-channel processing examples for variance filter.
- Created streaming examples for variance filter focusing on signal quality monitoring, real-time variability detection, and multi-channel EMG processing.
- Developed batch and moving Z-Score normalization examples with state management, including saving/restoring state and clearing state.
- Introduced streaming examples for Z-Score normalization, highlighting data preprocessing, anomaly detection, and multi-channel EEG signal normalization.
- Included feature extraction pipelines and adaptive threshold alerting in streaming examples for both filters.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
     "limits": "cpp",
     "utility": "cpp",
     "xutility": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "numeric": "cpp",
+    "memory": "cpp"
   }
 }
