--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "dsp-js-native",
+  "name": "dsp-ts-redis",
   "version": "1.0.0",
   "description": "High-performance DSP library with native C++ acceleration and Redis state persistence",
   "main": "index.js",
   "scripts": {
     "test": "node --import tsx --test src/ts/__tests__/MovingAverage.test.ts src/ts/__tests__/Rectify.test.ts src/ts/__tests__/RMS.test.ts src/ts/__tests__/Variance.test.ts src/ts/__tests__/ZScoreNormalize.test.ts src/ts/__tests__/Chaining.test.ts src/ts/__tests__/Redis.test.ts src/ts/__tests__/CircularLogBuffer.test.ts src/ts/__tests__/Tap.test.ts src/ts/__tests__/MeanAbsoluteValue.test.ts src/ts/__tests__/TimeSeries.test.ts src/ts/__tests__/TopicRouter.test.ts src/ts/__tests__/TopicRouterAdvanced.test.ts src/ts/__tests__/TopicRouterPriority.test.ts src/ts/__tests__/ListState.test.ts src/ts/__tests__/DriftDetector.test.ts",
     "build": "cmake-js compile",
-    "build-gyp": "node-gyp rebuild && node -e \"require('fs').cpSync('build/Release/dsp-js-native.node', 'src/build/dsp-js-native.node', {force:true}); console.log(`Copied build/Release/dsp-js-native.node to src/build/dsp-js-native.node`);\"",
+    "build-gyp": "node-gyp rebuild && node -e \"require('fs').cpSync('build/Release/dsp-ts-redis.node', 'src/build/dsp-ts-redis.node', {force:true}); console.log(`Copied build/Release/dsp-ts-redis.node to src/build/dsp-ts-redis.node`);\"",
     "prebuild": "prebuildify --napi --strip",
     "start": "tsx ./src/ts/index.ts"
   },
