--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "High-performance DSP library with native C++ acceleration and Redis state persistence",
   "main": "index.js",
   "scripts": {
-    "test": "node --import tsx --test src/ts/__tests__/MovingAverage.test.ts src/ts/__tests__/Rectify.test.ts src/ts/__tests__/RMS.test.ts src/ts/__tests__/Variance.test.ts src/ts/__tests__/ZScoreNormalize.test.ts src/ts/__tests__/Chaining.test.ts src/ts/__tests__/Redis.test.ts src/ts/__tests__/CircularLogBuffer.test.ts src/ts/__tests__/Tap.test.ts src/ts/__tests__/MeanAbsoluteValue.test.ts src/ts/__tests__/TimeSeries.test.ts src/ts/__tests__/TopicRouter.test.ts src/ts/__tests__/TopicRouterAdvanced.test.ts src/ts/__tests__/TopicRouterPriority.test.ts src/ts/__tests__/ListState.test.ts src/ts/__tests__/DriftDetector.test.ts src/ts/__tests__/WillisonAmplitude.test.ts src/ts/__tests__/SlopeSignChange.test.ts src/ts/__tests__/WaveformLength.test.ts",
-    "build": "cmake-js compile",
-    "build-gyp": "node-gyp rebuild && node -e \"require('fs').cpSync('build/Release/dsp-ts-redis.node', 'src/build/dsp-ts-redis.node', {force:true}); console.log(`Copied build/Release/dsp-ts-redis.node to src/build/dsp-ts-redis.node`);\"",
-    "prebuild": "prebuildify --napi --strip",
+    "test": "node scripts/test.js",
+    "build": "node-gyp rebuild && node -e \"require('fs').cpSync('build/Release/dsp-ts-redis.node', 'src/build/dsp-ts-redis.node', {force:true}); console.log(`Copied build/Release/dsp-ts-redis.node to src/build/dsp-ts-redis.node`);\"",
     "start": "tsx ./src/ts/index.ts"
   },
   "binary": {
@@ -36,7 +34,6 @@
     "@jest/globals": "^30.2.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.9.1",
-    "cmake-js": "^7.3.1",
     "jest": "^30.2.0",
     "prebuildify": "^6.0.1",
     "ts-jest": "^29.4.5",
