--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
         run: npm install
 
       - name: Build native addon
-        run: npm run build-gyp
+        run: npm run build
 
       - name: Copy native addon to src/build
         run: |
@@ -109,7 +109,7 @@ jobs:
         run: npm install
 
       - name: Build native addon
-        run: npm run build-gyp
+        run: npm run build
 
       - name: Copy native addon to src/build
         shell: bash
