feat: Implement time-based expiration in CircularBufferArray and SlidingWindowFilter
- Added support for time-aware mode in CircularBufferArray, allowing items to be pushed with timestamps and expired based on a defined window duration.
- Introduced methods for pushing and overwriting items with timestamps, expiring old samples, and exporting buffer contents with timestamps.
- Updated SlidingWindowFilter to handle time-aware samples, including methods for adding samples with timestamps and expiring old samples before processing.
- Enhanced tests for time-based expiration in various processing scenarios, ensuring correct behavior with irregular sampling and streaming data.
- Added new test files for comprehensive coverage of time-based RMS, MAV, Variance, and Z-Score functionalities.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "node scripts/test.js",
     "build": "node-gyp rebuild && node -e \"require('fs').cpSync('build/Release/dsp-ts-redis.node', 'src/build/dsp-ts-redis.node', {force:true}); console.log(`Copied build/Release/dsp-ts-redis.node to src/build/dsp-ts-redis.node`);\"",
-    "prebuild": "prebuildify --napi --strip",
+    "prebuildify": "prebuildify --napi --strip",
     "start": "tsx ./src/ts/index.ts"
   },
   "binary": {
