--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   "type": "module",
   "dependencies": {
     "node-addon-api": "^8.5.0",
-    "node-gyp-build": "^4.8.0",
-    "redis": "^5.8.3"
+    "node-gyp-build": "^4.8.0"
   },
   "devDependencies": {
     "@jest/globals": "^30.2.0",
@@ -36,6 +35,7 @@
     "@types/node": "^24.9.1",
     "jest": "^30.2.0",
     "prebuildify": "^6.0.1",
+    "redis": "^5.9.0",
     "ts-jest": "^29.4.5",
     "tsx": "^4.20.6"
   }
