--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,9 @@
 name: CI
 
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
     branches: [main, develop]
@@ -158,6 +162,42 @@ jobs:
           name: prebuilds-${{ matrix.os }}
           path: prebuilds/
           retention-days: 90
+
+  release:
+    name: Release and Publish
+    runs-on: ubuntu-latest
+    needs: [test-ubuntu, test-other, prebuild] # Wait for all CI jobs
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push' # Only on main branch pushes
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Full history for semantic-release
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22.x
+          cache: "npm"
+          registry-url: "https://registry.npmjs.org"
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build package
+        run: npm run build
+
+      - name: Audit package
+        run: npm audit signatures
+
+      - name: Prebuild binaries
+        run: npm run prebuildify
+
+      - name: Release
+        run: npx semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   lint:
     name: Lint and Type Check
