--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,10 +1,6 @@
 {
   "branches": [
-    "main",
-    {
-      "name": "develop",
-      "prerelease": true
-    }
+    {"name": "main", "prerelease": "alpha"}
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
