chore: enhance CI configuration and caching for improved performance

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,12 +1,22 @@
 {
   "branches": [
-    {"name": "main", "prerelease": "alpha"}
+    {
+      "name": "main",
+      "channel": "alpha",
+      "prerelease": "alpha"
+    }
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
-    "@semantic-release/npm",
+    [
+      "@semantic-release/npm",
+      {
+        "npmPublish": true,
+        "tarballDir": "dist"
+      }
+    ],
     "@semantic-release/github"
   ]
 }
