--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,11 +11,10 @@ on:
     branches: [main]
 
 jobs:
-  # Test on Ubuntu with Redis service
+  # 🧪 Ubuntu tests (with Redis)
   test-ubuntu:
     name: Test on Ubuntu - Node ${{ matrix.node-version }} (with Redis)
     runs-on: ubuntu-latest
-
     strategy:
       fail-fast: false
       matrix:
@@ -33,14 +32,30 @@ jobs:
           --health-retries 5
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+
+      # Cache npm packages
+      - name: Cache npm cache directory
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ matrix.node-version }}-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-${{ matrix.node-version }}-
+
+      # Cache native build outputs
+      - name: Cache native build outputs
+        uses: actions/cache@v4
+        with:
+          path: build/Release
+          key: ${{ runner.os }}-${{ matrix.node-version }}-${{ hashFiles('binding.gyp', 'package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ matrix.node-version }}-
 
       - name: Install build tools
         run: sudo apt-get update && sudo apt-get install -y build-essential python3 redis-tools
@@ -61,7 +76,7 @@ jobs:
           timeout 30 bash -c 'until redis-cli ping; do sleep 1; done'
           echo "✅ Redis is ready"
 
-      - name: Run all tests (with Redis integration tests)
+      - name: Run all tests
         run: npm test
         env:
           REDIS_URL: redis://localhost:6379
@@ -80,11 +95,10 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-  # Test on Windows and macOS (Redis optional)
+  # 🧪 macOS + Windows tests
   test-other:
     name: Test on ${{ matrix.os }} - Node ${{ matrix.node-version }}
     runs-on: ${{ matrix.os }}
-
     strategy:
       fail-fast: false
       matrix:
@@ -92,14 +106,30 @@ jobs:
         node-version: [18.x, 20.x, 22.x]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+
+      # Cache npm
+      - name: Cache npm cache directory
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ matrix.node-version }}-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-${{ matrix.node-version }}-
+
+      # Cache build artifacts
+      - name: Cache native build outputs
+        uses: actions/cache@v4
+        with:
+          path: build/Release
+          key: ${{ runner.os }}-${{ matrix.node-version }}-${{ hashFiles('binding.gyp', 'package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ matrix.node-version }}-
 
       - name: Setup Redis (macOS)
         if: matrix.os == 'macos-latest'
@@ -121,30 +151,36 @@ jobs:
           mkdir -p src/build
           cp build/Release/dspx.node src/build/
 
-      - name: Run all tests (Redis tests will skip if unavailable)
+      - name: Run tests
         run: npm test
         env:
           REDIS_URL: redis://localhost:6379
 
+  # 🏗️ Prebuilds for all OS
   prebuild:
     name: Prebuild ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     needs: [test-ubuntu, test-other]
-
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 22.x
           cache: "npm"
+
+      - name: Cache npm cache directory
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-22-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-22-
 
       - name: Install build tools (Linux)
         if: ${{ matrix.os == 'ubuntu-latest' }}
@@ -153,7 +189,14 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build prebuilds
+      - name: Cache prebuilds
+        uses: actions/cache@v4
+        with:
+          path: prebuilds
+          key: prebuild-${{ runner.os }}-${{ hashFiles('binding.gyp') }}
+          restore-keys: prebuild-${{ runner.os }}-
+
+      - name: Build prebuild binaries
         run: npm run prebuildify
 
       - name: Upload prebuilds
@@ -163,21 +206,24 @@ jobs:
           path: prebuilds/
           retention-days: 90
 
+  # 🚀 Release job
   release:
     name: Release and Publish
     runs-on: ubuntu-latest
-    needs: [test-ubuntu, test-other, prebuild] # Wait for all CI jobs
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push' # Only on main branch pushes
-    permissions: # Add this block
-      contents: write # Allows pushing tags and commits
-      issues: write # Allows closing issues via releases
-      pull-requests: write # Allows updating PRs if needed
+    needs: [test-ubuntu, test-other, prebuild]
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    permissions:
+      contents: write
+      issues: write
+      pull-requests: write
       id-token: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Full history for semantic-release
+          fetch-depth: 0 # full git history required by semantic-release
+          ref: main # ensure we’re on an actual branch, not detached
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -187,22 +233,16 @@ jobs:
           registry-url: "https://registry.npmjs.org"
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Build package
         run: npm run build
 
-      - name: Audit package
-        run: npm audit signatures
-
-      - name: Prebuild binaries
-        run: npm run prebuildify
-
-      - name: Configure npm authentication
+      - name: Configure npm auth
         run: |
           echo "registry=https://registry.npmjs.org/" > .npmrc
           echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" >> .npmrc
-          echo "alwaysAuth=true" >> .npmrc
+          echo "always-auth=true" >> .npmrc
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
@@ -217,27 +257,18 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
 
+  # 🧹 Lint and Type Check
   lint:
     name: Lint and Type Check
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 22.x
           cache: "npm"
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run ESLint (if configured)
-        run: npx eslint src --max-warnings=0 || echo "⚠️ ESLint not configured, skipping"
+      - run: npm install
+      - run: npx eslint src --max-warnings=0 || echo "⚠️ ESLint not configured, skipping"
         continue-on-error: true
-
-      - name: TypeScript type check
-        run: npx tsx --noEmit || echo "⚠️ TypeScript check skipped"
+      - run: npx tsc --noEmit || echo "⚠️ TypeScript check skipped"
         continue-on-error: true
