--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -233,18 +233,19 @@ jobs:
       - name: Build package
         run: npm run build
 
-      - name: Publish to npm
-        id: changesets
-        uses: changesets/action@v1
-        with:
-          # This one-step process versions, commits to main, and publishes
-          publish: |
-            npm run version
-            npm run publish-packages
-          commit: "ci(release): version packages"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Version and Publish
+          id: changesets
+          uses: changesets/action@v1
+          with:
+            # This runs "npm run version" to create the PR
+            version: npm run version
+            # This runs "npm run publish-packages" AFTER the PR is merged
+            publish: npm run publish-packages
+            commit: "ci(release): version packages"
+            title: "ci(release): version packages"
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   # 🧹 Lint and Type Check
   lint:
