--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "test": "node scripts/test.js",
     "build:ts": "tsc",
-    "build:native": "node-gyp rebuild && node -e \"const fs = require('fs'); const path = require('path'); fs.mkdirSync('src/ts', { recursive: true }); fs.mkdirSync('dist/', { recursive: true }); fs.cpSync('build/Release/dspx.node', 'src/ts/dspx.node', { force: true }); fs.cpSync('build/Release/dspx.node', 'dist/dspx.node', { force: true }); console.log('Copied native module to src/ts and dist/');\"",
+    "build:native": "node-gyp rebuild",
     "build": "npm run build:native && npm run build:ts",
     "prebuildify": "prebuildify --napi --strip --target 18.0.0 --target 20.0.0 --target 22.0.0",
     "changeset": "changeset",
